# server/routes/userRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const authController = require('./../controllers/authController');
+
+const router = express.Router();
+
+router.post('/users', authController.signup);
+
+module.exports = router;
